portal/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: gateway
  namespace: portal
spec:
  rules:
  - host: portal.devheaven.nl
    http:
      paths:
      - backend:
          serviceName: portal-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - portal.devheaven.nl
    secretName: portal-cert
